# Toxicity_Comments_Detector

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: README.md  app.py  requirements.txt
app/static/: script.js  style.css
app/templates/: index.html
archive_notebooks/Training Models/: BERT (obsoleted).ipynb  Decision Tree.ipynb  LSTM.ipynb  SGD_Regressor.ipynb
archive_notebooks/data_cleaning/: clean_process.ipynb
archive_notebooks/data_collection/: data_crawling.ipynb  tweets.json
data/: README.md
package/: README.md  environment.yml
package/toxic/toxics/: __init__.py  eval.py
package/toxic/utils/: __init__.py  models.py
tests/: test_data_v2.csv  test_model.py
